# tiny-lz4-decoder

./: .gitignore  Cargo.toml  LICENSE  README.md
lz4-builder/: Cargo.toml  build.rs
lz4-builder/src/: lib.rs
tiny-lz4-decoder-sys/: Cargo.toml  README.md  build.rs
tiny-lz4-decoder-sys/src/: decoder.rs  ehandle.rs  ffi.rs  lib.rs
