[package]
name = "lz4-builder"
version = "1.0.0"
edition = "2021"
build = "./build.rs"
authors = ["Onur Ozkan <contact@onurozkan.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/foss-lodpm/tiny-lz4-decoder"
homepage = "https://github.com/foss-lodpm/tiny-lz4-decoder"
description = "zero dependency, tiny lz4 decompression wrapper built for lodpm"
categories = ["decompression", "decoder", "ffi", "wrapper", "lz4"]
keywords = ["decompression", "decoder", "ffi", "wrapper", "lz4"]

[lib]
doctest = false
