[package]
name = "tiny-lz4-decoder-sys"
version = "1.0.1"
edition = "2021"
authors = ["Onur Ozkan <contact@onurozkan.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lodosgroup/tiny-lz4-decoder"
homepage = "https://github.com/lodosgroup/tiny-lz4-decoder"
description = "zero dependency, tiny lz4 decompression wrapper built for lodpm"
categories = ["decompression", "decoder", "ffi", "wrapper", "lz4"]
keywords = ["decompression", "decoder", "ffi", "wrapper", "lz4"]

[lib]
doctest = false

[dependencies]
lz4-builder = { version = "1.0.1", path = "../lz4-builder" }
